Added more changes: Rewrote ALL enums to follow the uppercase snakecase pattern `LIKE_THIS` including the ones defined in the database Made some structural changes to the DB schema itself Made changes to the raidPGCR batch process to include those enums and instead of writing to an ObjectStream to write to an outputStream using the object mapper Also rewrote one of the processors to compressorProcessor instead of RaidPgcrItemProcessor Added a @ManyToOne relationship to PlayerRaidActivityWeaponStats to have Bidirectional relationship with PlayerRaidActivityStats Rewrote the Raid entity to instead have a primary key based on the pair-values of RaidName and RaidDifficulty Changed the schema around the Raid entity to have this change reflected as well Added weaponName attribute to Weapon entity (which I forgot oops) Created a RaidHash entity in the application code as well the DB to have a place to have all the hashes that uniquely identify a raid Added a noSkip policy for ManifestException.class exception types Still writing the RaidPgcrProcessStep, not quite finished but I wanted this commit to be a checkpoint